sidebar layout issue

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
 .main-container {
   display: flex;
   align-content: center;
+  height: 100%;
 }
 
 .main-content {
@@ -14,6 +15,7 @@
   align-content: center;
   width: 100%;
   min-height: 90vh;
+  height: 100%;
   padding: 0 20px;
   position: relative;
 }
